# Research_Agent

./: .env  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
output/: cnn_report.md  cnn_report.txt  large_language_models_in_drug_discovery_report.md  large_language_models_in_drug_discovery_report.txt  machine_learning_in_healthcare_diagnostics_report.md  machine_learning_in_healthcare_diagnostics_report.txt  references.bib  your_research_topic_report.md  your_research_topic_report.txt  your_topic_here_report.md  your_topic_here_report.txt
research_agent/: __init__.py  agent.py  citations.py  config.py  llm.py  report.py  search.py  summarizer.py
static/: index.html
tests/: test_research_agent.py
